--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DATABASE_URL=sqlite:///./ding.db
 SENDGRID_API_KEY=your-sendgrid-api-key-here
 SENDGRID_FROM_EMAIL=noreply@yourdomain.com
 
-# Printer Configuration
+# Printer Configuration - Example ID's are for Netum NT-1809DD/NT-1809 Mini Thermal Printer
 PRINTER_VENDOR_ID=0x0416
 PRINTER_PRODUCT_ID=0x5011
 PRINTER_DEVICE_PATH=/dev/usb/lp0
